--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -15,6 +15,7 @@
 
 @import "components/theme";
 @import "components/btn";
+@import "components/workout-opener";
 @import "components/workout-lists";
 
 @import "../pages/auth/sign-up/sign-up";
