--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -16,7 +16,7 @@
 @import "components/theme";
 @import "components/btn";
 @import "components/workout-opener";
-@import "components/workout-lists";
+@import "components/lists";
 
 @import "../pages/auth/sign-up/sign-up";
 @import "../pages/auth/forgot-password/forgot-password";
