--- a/app/theme/components/btn.scss
+++ b/app/theme/components/btn.scss
@@ -11,6 +11,7 @@
   //background-color: rgba(255,255,255,0.3);
   font-size: 16px;
   text-shadow: 0 0 80px rgba(0,0,0,.2);
+  color: #fff;
   text-align: center;
 
   &.btn-checked {
@@ -31,7 +32,7 @@
 }
 
 .btn-footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   margin: 0;
   background: color($colors, primary);
