--- a/app/theme/components/workout-opener.scss
+++ b/app/theme/components/workout-opener.scss
@@ -1,4 +1,5 @@
 .workout-opener {
+  position: relative;
   width: 100%;
   height: 100%;
 
@@ -23,7 +24,25 @@
   }
 
   .img-overlay {
+    position: absolute;
+    z-index: 10;
     width: 100%;
     height: 100%;
+    padding: 25% 10%;
+
+    h1 {
+      margin: 40% auto 0;
+      color: #fff;
+      font-size: 50px;
+      text-align: center;
+      text-shadow: 0 0 40px rgba(0,0,0,.6);
+    }
+
+    .workout-info {
+      margin: 20px 0;
+      font-size: 16px;
+      color: #fff;
+      text-align: center;
+    }
   }
 }
