--- a/app/theme/fonts/default-fonts.scss
+++ b/app/theme/fonts/default-fonts.scss
@@ -32,4 +32,4 @@
   font-style: normal;
 }
 
-@import 'https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Varela+Round';
